# src/swagger.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "RentalX Documentation",
+    "title": "RentX Documentation",
     "description": "This is an API Rent",
     "version": "1.0.0",
     "contact": {
@@ -40,7 +40,7 @@
           "201": {
             "description": "Created"
           },
-          "500": {
+          "400": {
             "description": "Category Already exists!"
           }
         }
@@ -81,7 +81,7 @@
         "description": "Import categories from CSV file",
         "requestBody": {
           "content": {
-            "multipart/form-data": {
+            "multiparm/form-data": {
               "schema": {
                 "type": "object",
                 "properties": {
@@ -110,15 +110,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "description": {
-                    "type": "string"
-                  }
-                },
+                "$ref": "#/definitions/Specification",
                 "example": {
                   "name": "Specification name sample",
                   "description": "Specification description sample"
@@ -163,6 +155,19 @@
               }
             }
           }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "Specification": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
         }
       }
     }
